# renova-agent

./: .env.example  .gitignore  AGENTS.md  AGENT_PROMPT.md  CHANGELOG.md  MANIFEST.md  PROJECT_PROMPT.md  PROMPT_CODEX.md  README.md  README_LANZAMIENTO.md  RENOVA_OPEN_SYSTEM_PLAN.md  SECURITY.md  SERESARTE_BRAIN_START_HERE.md  TAXONOMIA.md  app.js  calculator.js  eslint.config.mjs  index.html  package.json  page-agent-bridge.js  pyproject.toml  server.py  styles.css
.codex/: codex-task-master.md
.github/: dependabot.yml
00_INBOX/: README.md
01_SERESARTE/: README.md
02_RENOVA/: README.md
03_DAO/: README.md
04_NOUS/: README.md
05_CLIENTES/: README.md
06_LIBROS/: README.md
07_DECISION_LOG/: 2026-07-09-pr-and-vault-cleanup.md  2026-07-10-repository-hardening.md  README.md
07_PERSONAS/: README.md
08_OUTPUTS/: README.md
09_META/: MAPA_MAESTRO.md  glosario_maestro.md  prompt_maestro_chatgpt.md  prompt_maestro_codex.md  taxonomia.md
SERESARTE_BRAIN/: AGENTS.md  MAPA_MAESTRO.md  README.md
config/: constitution.yaml  identity.json  safety_policy.yaml  system_prompt.txt
data/: glossary_min.json  sample_assessment.json
docs/: ARCHITECTURE.md  CODEX_MOBILE_SETUP.md  CODEX_PROMPT_MASTER.md  DEPLOYMENT.md  GITHUB_SETUP.md  IMAGE_PROMPTS.md  LOVABLE_UI_SPEC.md  OPEN_CORPUS.md  RENOVAGRAMA.md  RENOVA_AGENT.md  RENOVA_AGENT_SPEC.md  RENOVA_APP_PRODUCT_SPEC.md  RENOVA_INDEX.md  RENOVA_LAB_KIT.md  ROADMAP.md  (+15 more)
projects/nous-intelligence-rooms/: .env.example  AGENTS.md  CODEX_COPY_PASTE_FINAL.txt  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
projects/nous-intelligence-rooms/app/: demo_analysis.json  server.py
projects/nous-intelligence-rooms/app/sample_inputs/: SERESARTE_demo_brief.txt
projects/nous-intelligence-rooms/app/static/: app.js  index.html  styles.css
projects/nous-intelligence-rooms/submission/: CODEX_BUILD_LOG.md  FINAL_URLS_TEMPLATE.md
projects/nous-intelligence-rooms/tests/: test_app.py
(+96 files in other folders)
