[project]
name = "nous-intelligence-rooms"
version = "1.0.0"
description = "Evidence-backed strategic decision workspace for OpenAI Build Week 2026"
requires-python = ">=3.11"
authors = [{name = "Carlos Jonathan González Rodríguez"}]
license = {text = "Evaluation License"}

[tool.pytest.ini_options]
testpaths = ["tests"]
